# yael

./: .clang-format  .clang-format-include  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  clang-tidy.sh  meson.build  meson_options.txt  run-benchmark-clients.py  run-benchmark.py  run_benchmark.sh
.github/workflows/: ci.yml
benchmark/: Client.cpp  Server.cpp  defines.h
ci/: clang-tidy.sh  install-packages.sh  integration-tests.sh  setup-prereq-ext.sh  setup-yael.sh  unit-tests.sh
docker/: run-clang-tidy.sh  run-test.sh  setup-yael.sh  yael.Dockerfile
include/yael/: DelayedNetworkSocketListener.h  EventListener.h  EventLoop.h  NetworkSocketListener.h  SocketListener.h  TimeEventListener.h  yael.h
include/yael/network/: Address.h  MessageSlicer.h  Socket.h  TcpSocket.h  TlsSocket.h  buffer.h
scripts/: clang-tidy.sh  integration-tests.sh  setup-yael.sh  unit-tests.sh
src/: DelayedNetworkSocketListener.cpp  EventListener.cpp  EventLoop.cpp  NetworkSocketListener.cpp  SocketListener.cpp  TimeEventListener.cpp  meson.build
src/network/: Address.cpp  ClientCredentials.h  DatagramMessageSlicer.h  MessageSlicer.h  ServerCredentials.h  Socket.cpp  StreamMessageSlicer.h  TcpSocket.cpp  TlsContext.cpp  TlsContext.h  TlsPolicy.h  TlsSocket.cpp
test/: AddressTest.cpp  AddressTest.h  EventLoopTest.cpp  EventLoopTest.h  SocketAsyncTest.cpp  SocketAsyncTest.h  SocketTest.cpp  SocketTest.h  TimeEventTest.cpp  churn.cpp  main.cpp  many_clients.cpp  meson.build  messages.cpp  multi_client.cpp  peerdb_bug.cpp  test.cert  test.key
test/unit/: AddressTest.cpp  AsyncSocketTest.cpp  SocketTest.cpp  TimeEventTest.cpp  main.cpp  meson.build
